Styling: custom scrollbars, and fixed overflow on users display

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -58,3 +58,26 @@ $chatDisplayHeight: 100vh - $sendMessageDisplayHeight;
     transform: matrix(1/2, 0.5, 0.0, 1/2, 200, 400);
   }
 }
+
+::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 10px;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+  width: 12px;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #61dafb;
+}
+
